--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
-.idea
+e2e
 node_modules
-jspm_packages
+src/**/*.js
+src/**/*.js.map
+*.js
+*.js.map
 npm-debug.log
 debug.log
-src/**/*.js
-!src/systemjs.config.extras.js
-!src/systemjs.config.js
-*.js.map
-e2e/**/*.js
-e2e/**/*.js.map
-_test-output
-_temp
